# magnet-zither

./: Cargo.toml  openocd.cfg  shell.nix
.cargo/: config
nix/: .gitignore  Cargo.nix  cmdebug.nix  crate2nix.json  default.nix
src/: ac.rs  audio.rs  command_parser.rs  const_assert.rs  dual_slope_pwm.rs  main.rs  string.rs  usb_console.rs
src/dac/: mod.rs
src/evsys/: mod.rs
src/evsys/channel/: mod.rs  reg.rs
src/pwm_dac/: mod.rs  reg.rs
src/string/: dac_driver.rs  led_driver.rs
src/string_driver/: mod.rs  reg.rs
