[package]
name = "magnet-zither"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2021"

[dependencies]
atsamd-hal = { version = "0.13.0", features = ["rtic"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "0.6.0-rc.4"
embedded-hal = "0.2.6"
libm = "0.2.1"
panic-halt = "0.2.0"
samd-dma = { version = "0.3.0", features = ["samd21g"] }
itsybitsy_m0 = {version = "0.11.0", features = [ "usb" ] }
heapless = "0.7.8"
err-derive = { version = "0.3.0", default-features = false }
embedded-midi = { version = "0.1.2" }
seq-macro = "0.2.2"
paste = "1.0.6"
num-traits = { version = "0.2.14", default-features = false }

[patch.crates-io]
atsamd-hal = { path = "../../atsamd/hal" }
itsybitsy_m0 = { path = "../../atsamd/boards/itsybitsy_m0" }
atsamd21g = { path = "../../atsamd/pac/atsamd21g" }
samd-dma = { path = "../../samd-dma" }
#atsamd-hal = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#trinket_m0 = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#atsamd21e = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#samd-dma = { git = "https://github.com/lopsided98/samd-dma.git", branch = "bug-fixes"  }

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

