[package]
name = "magnet-zither"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2021"

[dependencies]
atsamd-hal = { version = "0.13.0", features = ["rtic"] }
cortex-m-rtic = "0.6.0-rc.4"
embedded-midi = { version = "0.1.2" }
heapless = "0.7.8"
itsybitsy_m0 = {version = "0.11.0", features = [ "usb" ] }
num-traits = { version = "0.2.14", default-features = false }
panic-halt = "0.2.0"
paste = "1.0.6"
samd-dma = { version = "0.3.0", features = ["samd21g"] }
seq-macro = "0.2.2"
usbd-midi = "0.2.0"

[patch.crates-io]
atsamd-hal = { path = "../../atsamd/hal" }
itsybitsy_m0 = { path = "../../atsamd/boards/itsybitsy_m0" }
atsamd21g = { path = "../../atsamd/pac/atsamd21g" }
samd-dma = { path = "../../samd-dma" }
#atsamd-hal = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#trinket_m0 = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#atsamd21e = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#samd-dma = { git = "https://github.com/lopsided98/samd-dma.git", branch = "bug-fixes"  }

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

