[package]
name = "magnet-zither"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m-rtic = "0.6.0-rc.4"
heapless = "0.7.15"
itsybitsy_m0 = {version = "0.13.0", features = ["rtic", "usb"] }
num-traits = { version = "0.2.15", default-features = false }
num-rational = { version = "0.4.1", default-features = false }
panic-halt = "0.2.0"
paste = "1.0.7"
samd-dma = { version = "0.3.0", features = ["samd21g"] }
seq-macro = "0.3.0"
usbd-midi = { git = "https://github.com/btrepp/usbd-midi.git" }

[patch.crates-io]
atsamd-hal = { path = "../../atsamd/hal" }
atsamd21g = { path = "../../atsamd/pac/atsamd21g" }
samd-dma = { path = "../../samd-dma" }
#atsamd-hal = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#trinket_m0 = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#atsamd21e = { git = "https://github.com/lopsided98/atsamd.git", branch = "custom-fixes" }
#samd-dma = { git = "https://github.com/lopsided98/samd-dma.git", branch = "bug-fixes"  }

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

